# Wisconsin-Robotics-Object-Detection

./: .gitignore  instructions.txt  runCamera.py
Split/: split.py
WRoverSoftware/: README.md
WRoverSoftware/executable_launches/: README.md
WRoverSoftware/src/: README.md
WRoverSoftware/src/Autonomous/auto_implementation/: package.xml  setup.cfg  setup.py
WRoverSoftware/src/Autonomous/object_avoidance/: package.xml  setup.py
WRoverSoftware/src/Autonomous/object_detection/: package.xml  setup.py
WRoverSoftware/src/Autonomous/object_detection_package/: README.md  package.xml
WRoverSoftware/src/Autonomous/object_detection_package/object_detection_package/: yolo_detection.py
WRoverSoftware/src/Autonomous/path_planning/: package.xml  setup.py
WRoverSoftware/src/Autonomous/sensors/: package.xml  setup.py
WRoverSoftware/src/Autonomous/state_machine/: package.xml  setup.py
WRoverSoftware/src/Messages/custom_msgs_srvs/: CMakeLists.txt
WRoverSoftware/src/Teleop/arm/: package.xml  setup.py
YOLO11/: fine-tuning1.ipynb  fine-tuning2.ipynb  fine-tuning3.ipynb  train.ipynb  validate.ipynb
YOLO11/.ipynb_checkpoints/: fine-tuning2-checkpoint.ipynb  fine-tuning3-checkpoint.ipynb  validate-checkpoint.ipynb
YOLO11/yolo_labeled_data/: data.yaml
YOLO11/yolo_labeled_data/.ipynb_checkpoints/: data-checkpoint.yaml
YOLO11/yolo_labeled_data/new_train/: labels.cache
YOLO11/yolo_labeled_data/new_valid/: labels.cache
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/object_detection_package/: setup.cfg  setup.py
(+763 files in other folders)
