<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection_package</name>
  <version>0.0.0</version>
  <description>A ROS2 package for YOLO-based object detection</description>
  <maintainer email="davidw070129@gmail.com">David Wang</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>zmq</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
 
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend> 
  <exec_depend>rosidl_runtime_py</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
